--- a/wwwroot/config.json
+++ b/wwwroot/config.json
@@ -33,22 +33,22 @@
         //     enableOnLocalhost: true // If false, don't show this when running on localhost
         // },
         
-        /*
+        
         developerAttribution: {
-            text: "Your organisation",
-            link: "http://www.example.com"
-        },*/
+            text: "StatsMatter",
+            link: "https://www.statsmatter.in"
+        },
         // This is used in various text messages. You should also set <title> in index.html
-        appName: "Terria Map",
+        appName: "Darpn Map",
 
         // See comments in lib/Views/global.scss for further information about customising colors, logos, fonts etc.
         brandBarElements: [
             "",
-            "<a target=\"_blank\" href=\"https://terria.io\"><img src=\"images/terria_logo.png\" height=\"52\" title=\"Version: {{version}}\" /></a>",
+            "<a target=\"_blank\" href=\"https://www.statsmatter.in\"><img src=\"images/darpn_logo.png\" height=\"52\" title=\"Version: {{version}}\" /></a>",
             ""
         ],
         // Shown when things go wrong.
-        supportEmail: "help@example.com",
+        supportEmail: "statsmatterin@gmail.com",
         // You probably shouldn't change this.
         proj4ServiceBaseUrl: "proj4def/",
         // Or this
